--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,7 @@ libapache2-mod-fcgid (1:2.3.7-1) UNRELEASED; urgency=low
   * Adopt the package. (Closes: #713917)
   * Switch from cdbs to dh-style rules file.
   * Switch to debhelper compat level 9.
+  * Bump Standards-Version to 3.9.4, no changes needed.
 
  -- Felix Geyer <fgeyer@debian.org>  Sat, 10 Aug 2013 10:35:57 +0200
 
