--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,7 @@ libapache2-mod-fcgid (1:2.3.7-1) UNRELEASED; urgency=low
   * Switch from cdbs to dh-style rules file.
   * Switch to debhelper compat level 9.
   * Bump Standards-Version to 3.9.4, no changes needed.
+  * Improve the short description. (Closes: #664202)
 
  -- Felix Geyer <fgeyer@debian.org>  Sat, 10 Aug 2013 10:35:57 +0200
 
