--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,8 @@ libapache2-mod-fcgid (1:2.3.7-1) UNRELEASED; urgency=low
   * Switch to debhelper compat level 9.
   * Bump Standards-Version to 3.9.4, no changes needed.
   * Improve the short description. (Closes: #664202)
+  * Guard AddHandler option in fgcid.conf so it's only used when
+    the mime module is laoded. (Closes: #711542)
 
  -- Felix Geyer <fgeyer@debian.org>  Sat, 10 Aug 2013 10:35:57 +0200
 
