--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,7 @@ libapache2-mod-fcgid (1:2.3.7-1) UNRELEASED; urgency=low
   * Improve the short description. (Closes: #664202)
   * Guard AddHandler option in fgcid.conf so it's only used when
     the mime module is laoded. (Closes: #711542)
+  * Add Vcs-* headers.
 
  -- Felix Geyer <fgeyer@debian.org>  Sat, 10 Aug 2013 10:35:57 +0200
 
