--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-libapache2-mod-fcgid (1:2.3.7-1) UNRELEASED; urgency=low
+libapache2-mod-fcgid (1:2.3.7-1) unstable; urgency=low
 
   * Adopt the package. (Closes: #713917)
   * Switch from cdbs to dh-style rules file.
@@ -9,7 +9,7 @@ libapache2-mod-fcgid (1:2.3.7-1) UNRELEASED; urgency=low
     the mime module is laoded. (Closes: #711542)
   * Add Vcs-* headers.
 
- -- Felix Geyer <fgeyer@debian.org>  Sat, 10 Aug 2013 10:35:57 +0200
+ -- Felix Geyer <fgeyer@debian.org>  Sat, 10 Aug 2013 11:15:31 +0200
 
 libapache2-mod-fcgid (1:2.3.7-0.1) unstable; urgency=low
 
